Exclude user-agent from vote and visit counting

--- a/config/config.yml
+++ b/config/config.yml
@@ -10,7 +10,8 @@ database:
   database: xxx
   
 miscs:
-  minify:     enable
-  thumbnails: enable
-  cookie:     dafuq are u doing? pls stahp
-  csrf:       _csrf
+  minify:      enable
+  thumbnails:  enable
+  cookie:      dafuq are u doing? pls stahp
+  csrf:        _csrf
+  excluded_ua: [ '*google*', '*yahoo*', '*bing*' ]
