--- a/config/config.yml
+++ b/config/config.yml
@@ -10,8 +10,9 @@ database:
   database: xxx
   
 miscs:
-  minify:      enable
+  minify:      disable
   thumbnails:  enable
   cookie:      dafuq are u doing? pls stahp
   csrf:        _csrf
-  excluded_ua: [ '*google*', '*yahoo*', '*bing*' ]
+  excluded_ua: [ '*google*', '*yahoo*', '*bing*', '*facebook*' ]
+  description: Quotone allows you to share with the world your favorite quotes from novels, movies, anime, manga, comics, videogames and so on in a completely anonimous way without any type of registration.
